src/test/ui/mismatched_types/overloaded-calls-bad.stderr
error[E0308]: mismatched types
  --> $DIR/overloaded-calls-bad.rs:28:17
   |
LL |     let ans = s("what");
   |               - ^^^^^^ expected `isize`, found `&str`
   |               |
   |               arguments to this function are incorrect

error[E0057]: this function takes 1 argument but 0 arguments were supplied
  --> $DIR/overloaded-calls-bad.rs:29:15
   |
LL |     let ans = s();
   |               ^-- an argument of type `isize` is missing
   |
help: provide the argument
   |
LL |     let ans = s(/* isize */);
   |               ~~~~~~~~~~~~~~

error[E0057]: this function takes 1 argument but 2 arguments were supplied
  --> $DIR/overloaded-calls-bad.rs:31:15
   |
LL |     let ans = s("burma", "shave");
   |               ^ -------  ------- argument of type `&'static str` unexpected
   |                 |
   |                 expected `isize`, found `&str`
   |
help: remove the extra argument
   |
LL |     let ans = s(/* isize */);
   |               ~~~~~~~~~~~~~~

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0057, E0308.
For more information about an error, try `rustc --explain E0057`.
